[package]
name = "volc-visual-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Rust SDK for Volcengine Intelligent Visual (CV) services with native Signature V4"
license = "MIT"
repository = "https://github.com/Boos4721/volc-visual-sdk"
readme = "README.md"
keywords = ["volcengine", "visual", "cv", "sdk", "signature"]
categories = ["api-bindings", "web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[features]
default = ["blocking"]
blocking = ["dep:reqwest"]
async = ["dep:reqwest", "reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "text_to_image"
required-features = ["blocking"]

[[example]]
name = "async_task_poll"
required-features = ["blocking"]
